hphp/hack/test/dynamic_view/test_unknown_method.php
<?hh // partial

function test() : int {
  // something isn't defined
  $x = something();
  hh_show($x);
  return $x;
}
